Minor CSS bugfix
The border between the post and user's profile on desktop view was implemented in 2 places, creating an uneven border. Fixed.

--- a/Themes/blanko_fes/css/index.css
+++ b/Themes/blanko_fes/css/index.css
@@ -2865,7 +2865,6 @@ div.postarea .btn-group .dropdown-toggle:nth-child(3)
     }
     .col-md-2 {
         padding-left: 0;
-        border-right: 1px solid #d3d3d3;
         margin-right: -1px;
         margin-bottom: 0;
         min-height: 180px;
